cloud-formation/deploy-network.yml
Parameters:
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
Resources:
  solVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
        - Key: stack
          Value: smart-sol
        - Key: Name
          Value: smart-sol-vpc
  solInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: smart-sol-gtw
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: solVPC
      InternetGatewayId:
        Ref: solInternetGateway
  solRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:  
        Ref: solVPC
  solRoute:
    Type: AWS::EC2::Route
    DependsOn: solInternetGateway
    Properties:
       RouteTableId:
         Ref: solRouteTable
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId:
         Ref: solInternetGateway
  devSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref solVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: "ca-central-1a"
      Tags:
      - Key: stack
        Value: dev
      - Key: Name
        Value: sol-dev-subnet
  stagingSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref solVPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: "ca-central-1b"
      Tags:
      - Key: stack
        Value: staging
      - Key: Name
        Value: sol-staging-subnet        
  prodSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref solVPC
      CidrBlock: 10.0.4.0/24
      AvailabilityZone: "ca-central-1d"
      Tags:
      - Key: stack
        Value: production
      - Key: Name
        Value: sol-prod-subnet        
  InstanceSSHSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    DependsOn: solVPC
    Properties:
      GroupDescription: Enable SSH access via port 22
      VpcId: !Ref solVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: '9100'
          ToPort: '9100'
          CidrIp: !Ref SSHLocation
      Tags:
      - Key: Name
        Value: sol-ssh-sg       
  InstanceHTTPSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    DependsOn: solVPC
    Properties:
      GroupDescription: Enable SSH and WEB Access
      VpcId: !Ref solVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: !Ref SSHLocation    
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref SSHLocation  
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: !Ref SSHLocation  
      Tags:
      - Key: Name
        Value: sol-http-sg    
# Outputs:
#   EC2SecurityGroup:
#     Description: Security Group to be used in EC2
#     Value: !GetAtt 
#       - InstanceSSHSecurityGroup
#       - GroupId
