cloud-formation/deploy.yml
Parameters:
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
#   KeyName:
#     Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
#     Type: 'AWS::EC2::KeyPair::KeyName'
#     ConstraintDescription: must be the name of an existing EC2 KeyPair.
Resources:
  solVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
        - Key: stack
          Value: smart-sol
        - Key: name
          Value: smart-sol-vpc
  solInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: stack
        Value: production
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: solVPC
      InternetGatewayId:
        Ref: solInternetGateway
  solRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:  
        Ref: solVPC
  solRoute:
    Type: AWS::EC2::Route
    DependsOn: solInternetGateway
    Properties:
       RouteTableId:
         Ref: solRouteTable
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId:
         Ref: solInternetGateway
  devSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref solVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: "ca-central-1a"
      Tags:
      - Key: stack
        Value: dev
  stagingSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref solVPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: "ca-central-1b"
      Tags:
      - Key: stack
        Value: staging
  prodSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref solVPC
      CidrBlock: 10.0.4.0/24
      AvailabilityZone: "ca-central-1d"
      Tags:
      - Key: stack
        Value: production
  InstanceSSHSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref SSHLocation
  InstanceHTTPSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: !Ref SSHLocation    
  # myInstance:
  #   Type: 'AWS::EC2::Instance'
  #   Properties: 
  #     ImageId: ami-0a70b9d193ae8a799
  #     InstanceType: t2.micro
  #     KeyName: my-key-pair
  #     SecurityGroupIds:
  #       - sg-12a4c434
  #     UserData:
  #       Fn::Base64: !Sub |
  #           #!/bin/bash
  #           yum update -y
  #           service httpd start
  #           chkconfig httpd on
